--- a/public/Chat.html
+++ b/public/Chat.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat_App</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
@@ -37,8 +37,8 @@
             </div>
        </div>
     </div>
-    <script src="./script.js"></script>
+    <script src="script.js"></script>
     <script src="/socket.io/socket.io.js"></script>
-    <script src="/js/client.js"></script>
+    <script src="client.js"></script>
 </body>
 </html>
