--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Join</title>
-    <link rel="stylesheet" href="./style1.css">
+    <link rel="stylesheet" href="style1.css">
     <script>
         function joinChat() {
             const username = document.getElementById('name').value.trim();
